--- a/src/app/colony-chronicles/colony-chronicles.component.html
+++ b/src/app/colony-chronicles/colony-chronicles.component.html
@@ -1,32 +1,45 @@
 <div class="container-fluid">
-<mat-card>
-    <mat-card-title>
-        <h3>Colony Chronicles</h3>
-    </mat-card-title>
-    <mat-card-content>
-        <h5>Below you'll find a collection of short stories written by the NimbatColony team. These are made possible by our lovely subscribers on Patreon; Members of the Visitant tier and above get access to some more risque stories, while more family friendly stories will be here for free.</h5>
-    </mat-card-content>
-    <mat-divider></mat-divider><br>
-    <h5><a routerLink="/year-round">Year Round</a></h5>
-    <h6><i>
-        “With the new year in the Colony having settled in, and everything returning to business as usual, it doesn't take long for one injustice to start things off terribly.”</i></h6>
-        Written on 1/18/2023, by Frequency. This story is free for all.
-        (3204 words, ~14 minute read.)
-        <hr>
-    <h5><a routerLink="/choose-your-path">Choose Your Path</a></h5>
-    <h6><i>
-        “For the disinterested, career day at school is just a long, boring event that you've gotta go to. Could anything spark interest for this nimbat?”</i></h6>
-        Written on 10/8/2022, by Finn. This story is free for all.
-        (2051 words, ~10 minute read.)
-        <hr>
-    <h5><a routerLink="/thou-have-yet-to-become-me">Thou Have Yet To Become Me</a></h5>
-    <h6><i>“If the one that’s supposed to keep you safe can’t even be trusted, how do you go to sleep at night? How do you look at your world, imagining a thousand ways of how it’d all burn down when the veil was lifted. The best you can do for now is to keep everyone feeling hopeful, just like you were taught.”</i></h6>
-        Written on 10/1/2022, by Frequency. This story is free for all.
-        (5638 words, ~24 minute read.)
-        <hr>
-    <h5><a routerLink="/caught-up-in-your-wheeling-dealing">Caught Up In Your Wheeling-Dealing</a></h5>
-    <h6><i>“After coming out of a long day’s worth of work in the Colony, you were approached by someone who seemed more than thankful to see you busting your butt for a good cause. Maybe she adored generous, hard-working people like herself. Or maybe she saw something on you that she wanted a taste of. A pairing between Anon and Rosmerta, the Proliferation Elder!”</i></h6>
-        Written on 7/9/2022, by Frequency. This <b>18+ NSFW</b> story is free for all.
-        (6417 words, ~28 minute read.)
-</mat-card>
+    <mat-card>
+        <mat-card-title>
+            <h3>Colony Chronicles</h3>
+        </mat-card-title>
+        <mat-card-content>
+            <div class="row pb-2">
+            <h5 class="col-md-8 offset-md-2">The Colony Chronicles are a collection of short stories created by the writers of the lore of the Nimbat
+                Colony. These are made possible by our Patreon supporters! All viewers have access to the regular SFW
+                stories, whereas <b>Visitant</b> tier Patreon Members have access to the NSFW stories.</h5></div>
+        </mat-card-content>
+        <mat-divider></mat-divider><br>
+        <div class="row">
+            <div class="col-md-8 offset-md-2"><h5><a routerLink="/year-round">Year Round</a></h5>
+                <h6><i>
+                        “With the new year in the Colony having settled in, and everything returning to business as usual, it
+                        doesn't take long for one injustice to start things off terribly.”</i></h6>
+                Written on 1/18/2023, by Frequency. This story is free for all.
+                (3204 words, ~14 minute read.)
+                <hr>
+                <h5><a routerLink="/choose-your-path">Choose Your Path</a></h5>
+                <h6><i>
+                        “For the disinterested, career day at school is just a long, boring event that you've gotta go to. Could
+                        anything spark interest for this nimbat?”</i></h6>
+                Written on 10/8/2022, by Finn. This story is free for all.
+                (2051 words, ~10 minute read.)
+                <hr>
+                <h5><a routerLink="/thou-have-yet-to-become-me">Thou Have Yet To Become Me</a></h5>
+                <h6><i>“If the one that’s supposed to keep you safe can’t even be trusted, how do you go to sleep at night? How
+                        do you look at your world, imagining a thousand ways of how it’d all burn down when the veil was lifted.
+                        The best you can do for now is to keep everyone feeling hopeful, just like you were taught.”</i></h6>
+                Written on 10/1/2022, by Frequency. This story is free for all.
+                (5638 words, ~24 minute read.)
+                <hr>
+                <h5><a routerLink="/caught-up-in-your-wheeling-dealing">Caught Up In Your Wheeling-Dealing</a></h5>
+                <h6><i>“After coming out of a long day’s worth of work in the Colony, you were approached by someone who seemed
+                        more than thankful to see you busting your butt for a good cause. Maybe she adored generous,
+                        hard-working people like herself. Or maybe she saw something on you that she wanted a taste of. A
+                        pairing between Anon and Rosmerta, the Proliferation Elder!”</i></h6>
+                Written on 7/9/2022, by Frequency. This <b>18+ NSFW</b> story is free for all.
+                (6417 words, ~28 minute read.)</div>
+        </div>
+        
+    </mat-card>
 </div>
