--- a/src/app/colony-culture/colony-culture.component.html
+++ b/src/app/colony-culture/colony-culture.component.html
@@ -5,7 +5,21 @@
         </mat-card-title>
         <mat-card-content>
             <hr>
-            <h5>Nimbat culture could be considered to be closer to primitive standards by modern understandings, though anthropologists would take quick note of its egalitarian nature similar to the world’s first farmers. Each individual has equal access to the means of survival, but think not of themself in order to ascertain that the Colony’s needs are also met. Whether it be learning new magic, cultivating food, or running errands outside of the Colony, they’re all working towards preservation, maintaining of standards, and the general thriving of the Colony. In a way, they’re not too unlike bees. There are workers, breeders, and a Council that works like the Colony’s queen, although the authority is spread out into a representative of each Flight rather than one centralized leader. Additionally, it is of note that the Nimbat social structure is matriarchal. Each Nimbat on the Council is female, and has likely birthed her fair share of Nimbats herself. </h5>
+            <div class="row">
+                <h5 class="col-md-8 offset-md-2">Nimbat culture could be considered to be closer to primitive standards
+                    by modern understandings, though
+                    anthropologists would take quick note of its egalitarian nature similar to the world’s first
+                    farmers.
+                    Each individual has equal access to the means of survival, but work with emphasis toward their
+                    community
+                    in order to ascertain that the Colony’s needs are also met. Whether it be learning new magic,
+                    cultivating food, or running errands outside of the Colony, they all work towards preservation and
+                    general community thriving. In a way, they are not too unlike bees. There are workers, protectors,
+                    and a
+                    Council that works akin to the Colony’s queen, although the authority is spread out into a
+                    representative of each of six Flights rather than one centralized leader. </h5>
+            </div>
+
         </mat-card-content>
     </mat-card>
 </div>
@@ -16,13 +30,36 @@
         </mat-card-title>
         <mat-card-content>
             <hr>
-            <div style="text-align:center"><img style="width: 25%; height: 10%;text-align:right;display: inline;vertical-align: top;" src="assets/media icon.png"></div>
-            <h6 style="text-align:center">Art by our very own Astrodyne!</h6>
-            <h6 style="text-align:center">From top left, going clockwise: Rosmerta (Proliferation), Katell (Preservation), Brianna (Progression), Eislyn (Protection), and Jena (Populace)</h6>
+            <div class="row">
+                <div class="col-md-8 offset-md-2">
+                    <div style="text-align:center"><img
+                            style="width: 25%; height: 10%;text-align:right;display: inline;vertical-align: top;"
+                            src="assets/media icon.png"></div>
+                    <h6 style="text-align:center">Art by our very own Astrodyne!</h6>
+                    <h6 style="text-align:center">
+                        From top left, going clockwise: Rosmerta (Proliferation), Katell (Preservation), Brianna
+                        (Progression), Eislyn (Protection), and Jena (Populace). Not pictured is Carolyn (Production).
+                    </h6>
+                </div>
+            </div>
             <hr>
-            <h5>The Colony itself, again, is matriarchal. At the helm of the entire operation sit five elder Nimbats, each of which lead their own Flight. The Council does not represent a unifying authority body, but it does allow each Flight to coordinate at the deepest level in order to make executive decisions for the Colony as needed. Otherwise, the Council keeps a sense of direction for each Flight, and maintains the operation at large.</h5>
+            <div class="row">
+                <div class="col-md-8 offset-md-2">
+                    <h5>The Colony itself is matriarchal. At the helm of the entire operation sit six elder Nimbats,
+                        each of
+                        which lead their own Flight. The Council does not represent a unifying authority body, but it
+                        does allow
+                        each Flight to coordinate at the deepest level in order to make executive decisions for the
+                        Colony as
+                        needed. Otherwise, the Council keeps a sense of direction for each Flight, and maintains the
+                        operation
+                        at large.</h5>
+                    <h5 class="notes">"I have met a couple of them in public! Detail on each of the Flight Elders and
+                        their sect
+                        leaders will be on the Flight's pages."</h5>
+                </div>
+            </div>
 
-            <h5 class="notes">"I have met a couple of them in public! Detail on each of the Flight Elders and their sect leaders will be on the Flight's pages."</h5>
         </mat-card-content>
     </mat-card>
 </div>
@@ -33,14 +70,34 @@
         </mat-card-title>
         <mat-card-content>
             <hr>
-            <h5>The Colony's citizens are organized loosely into five different Flights, all of which deal with a certain aspect of Colony society. They are as follows: <br/>
-                <a href="proliferation">Flight Proliferation</a> focuses on the continuation of the Nimbat species as a whole. <br/>
-                <a href="protection">Flight Protection</a> is concerned with keeping the Colony in safe hands. <br/>
-                <a href="preservation">Flight Preservation</a> aims to keep balance in the resources the Colony uses, as well as the space they take up. <br/>
-                <a href="populace">Flight Populace</a> makes sure every Colony citizen has the services they need to learn and grow. <br/>
-                <a href="progression">Flight Progression</a> takes information from the outside world, and works to incorporate it into Colony society. <br/>
-                
-                Additionally, there is a small number of Nimbats who choose to exist outside of the traditional Flight structure. They're referred to as "Flightless", however it is understood that is not any sort of insult. Most everyone understands the idea of not wanting to belong to any one Flight, and it's mostly seen as a time for a Nimbat to discover which they'd like to end up becoming a part of, if any. Further information on Flights is detailed on the Flight's pages, accessible via the menu or the links above.<br/></h5>
+            <div class="row">
+                <div class="col-md-8 offset-md-2">
+                    <h5>The Colony's citizens are organized loosely into six different Flights, all of which deal with a
+                        certain aspect of Colony society. They are as follows: <br />
+                        <a class="light-link" href="proliferation">Flight Proliferation</a> focuses on the continuation
+                        of the Nimbat species as a whole, through prenatal care and general health maintenance.<br />
+                        <a class="light-link" href="protection">Flight Protection</a> is concerned with keeping the
+                        Colony in safe hands from both external threats and internal challenges.
+                        <br />
+                        <a class="light-link" href="preservation">Flight Preservation</a> aims to keep balance in the
+                        resources the Colony uses, the life of the forest around them, and the history of the Colony
+                        itself.<br />
+                        <a class="light-link" href="populace">Flight Populace</a> makes sure every Colony citizen has
+                        the services they need to learn and grow.<br />
+                        <a class="light-link" href="progression">Flight Progression</a> takes information from the
+                        outside world, and works to incorporate it into Colony society.<br />
+                        <a class="light-link" href="production">Flight Production</a>ensures the colony runs smoothly by
+                        seeing that the proper amount of material goods are provided to everyone.
+                        Additionally, there is a small number of Nimbats who choose to exist outside of the traditional
+                        Flight structure. They are referred to as "Flightless", however it is understood that is not any
+                        sort of insult. Most everyone understands the idea of not wanting to belong to any one Flight,
+                        and it is mostly seen as a time for a Nimbat to discover which they would like to end up
+                        becoming a part of, if any. Further information on Flights is detailed on the Flight's pages,
+                        accessible via the menu or the links above.<br />
+                    </h5>
+                </div>
+            </div>
+
         </mat-card-content>
     </mat-card>
 </div>
