--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,42 +4,42 @@
             <h3>The Nimbat Colony</h3>
         </mat-card-title>
         <mat-card-content>
-            <h5>Primarily from the notes of Nimbat researcher █████████, this site is a transcription of the details
-                included in their extensive notes on the Nimbat species, and the Colony they reside in. There are plenty
-                of
-                readable portions of the book, though many more are currently illegible. A team of researchers are
-                working to
-                restore the pages, and the ones that are currently readable are archived here. As more pages become
-                accessible,
-                and more research is conducted, more will be added. Throughout the accounts, the researcher leaves a few
-                <span class="notes">personal notes</span>, detailing their specific interactions with certain parts of
-                the Colony itself.
-            </h5>
-            <h5>
-                It is recommended that only adult researchers access and use this site. Navigating from this page
-                implies you
-                understand that this site is for adults only.
-            </h5>
-            <h5>
-                Further information on lore development and usage can be found on the Logos and Lore Usage Guidelines
-                page.</h5>
+            <div class="row">
+                <h5 class="col-md-8 offset-md-2">Primarily from the notes of Nimbat researcher █████████, this site is an expository overview of the
+                    detailing on the Nimbat species’ physiology, their norms, and the Colony they reside in. There are
+                    plenty of portions of the researcher’s field book that are relatively easy to read and decipher,
+                    though
+                    many more are currently illegible. A team of archivists are working to restore the pages, and the
+                    ones
+                    that are currently readable are archived here. As more pages are transcribed, and more research is
+                    conducted, more will be added to this archive. Throughout the reports, the researcher leaves a few
+                    <span class="notes">personal notes</span>, detailing their specific interactions with certain parts
+                    of the Colony itself.
+                </h5>
+                <h5 class="col-md-8 offset-md-2">Further information on lore development and usage can be found on the <a class="light-link" href="/">Logos and Lore Usage
+                    Guidelines</a> page.</h5>
+            </div>
         </mat-card-content>
     </mat-card>
 </div>
 <div class="container-fluid">
     <mat-card>
         <mat-card-title>
-            <h3>Patreon Supporters</h3>
+            <div class="row">
+            <h3>Patreon Supporters</h3></div>
         </mat-card-title>
         <mat-card-subtitle>
-            <h5>These members of the community help us develop NimbatColony.info by donating to our <a
-                    class="light-link" href="https://www.patreon.com/nimbatcolony">Patreon</a>! If you'd like a spot among them here, please consider
-                supporting us!</h5>
+            <div class="row">
+            <h5 class="col-md-8 offset-md-2">The NimbatColony.info project is a labor of passion, and we’re overjoyed to see our <a class="light-link" href="https://www.patreon.com/nimbatcolony">Patreon</a> supporters
+                aid us and cheer us on in the effort. If you’d like to be included and mentioned as one of these
+                supporters, please consider donating to our <a class="light-link" href="https://www.patreon.com/nimbatcolony">Patreon</a>!</h5>
+            </div>
         </mat-card-subtitle>
         <mat-card-content>
             <div class="row">
                 <div class="col-md-12 align-self-center" style="text-align:center">
-                    <img style="width: 25%; height: auto;margin-top: 15px;margin-bottom: 15px" src="assets/bookends/devoted mark bookends title.png">
+                    <img style="width: 25%; height: auto;margin-top: 15px;margin-bottom: 15px"
+                        src="assets/bookends/devoted mark bookends title.png">
                 </div>
             </div>
             <div class="container">
@@ -52,7 +52,8 @@
             <mat-divider></mat-divider>
             <div class="row">
                 <div class="col-md-12 align-self-center" style="text-align:center">
-                    <img style="width: 15%; height: auto;margin-top: 15px;margin-bottom: 15px" src="assets/bookends/loyal mark bookends title.png">
+                    <img style="width: 15%; height: auto;margin-top: 15px;margin-bottom: 15px"
+                        src="assets/bookends/loyal mark bookends title.png">
                 </div>
             </div>
             <div class="container">
@@ -76,11 +77,12 @@
                         <h4 style="text-align:start;">Taica</h4>
                     </div>
                 </div>
-            </div>            
+            </div>
             <mat-divider></mat-divider>
             <div class="row">
                 <div class="col-md-12 align-self-center" style="text-align:center">
-                    <img style="width: 10%; height: auto;margin-top: 15px;margin-bottom: 15px" src="assets/bookends/peon mark bookends title.png">
+                    <img style="width: 10%; height: auto;margin-top: 15px;margin-bottom: 15px"
+                        src="assets/bookends/peon mark bookends title.png">
                 </div>
             </div>
             <div class="container">
@@ -89,11 +91,12 @@
                         <h5 style="text-align:center;">GamerFox</h5>
                     </div>
                 </div>
-            </div>        
+            </div>
             <mat-divider></mat-divider>
             <div class="row">
                 <div class="col-md-12 align-self-center" style="text-align:center">
-                    <img style="width: 5%; height: auto;margin-top: 15px;margin-bottom: 15px" src="assets/bookends/visitant bookend.png">
+                    <img style="width: 5%; height: auto;margin-top: 15px;margin-bottom: 15px"
+                        src="assets/bookends/visitant bookend.png">
                 </div>
             </div>
             <mat-divider></mat-divider>
